Fixed checkbox position in IE8. vertical-align: initial not supported.

--- a/fk7263/src/main/webapp/webcert/css/inera-certificate.css
+++ b/fk7263/src/main/webapp/webcert/css/inera-certificate.css
@@ -175,7 +175,7 @@ span.help {
   border: 0;
   display: inline-block;
   padding: 10px 10px;
-  vertical-align: initial;
+  vertical-align: middle;
   margin: 0; 
 }
 
